[gd_scene load_steps=8 format=2]

[ext_resource path="res://UIElements/CustomerPanel/CustomerCounterTurnip.tscn" type="PackedScene" id=1]
[ext_resource path="res://UIElements/CustomerPanel/CustomerCounterPumpkin.tscn" type="PackedScene" id=2]
[ext_resource path="res://UIElements/CustomerPanel/CustomerCounterCarrot.tscn" type="PackedScene" id=3]
[ext_resource path="res://UsedAssets/ui_icons/hourglass_top.png" type="Texture" id=4]
[ext_resource path="res://UIElements/ObjectLabel.tscn" type="PackedScene" id=5]
[ext_resource path="res://UsedAssets/new_theme.tres" type="Theme" id=6]
[ext_resource path="res://UIElements/CustomerPanel.gd" type="Script" id=7]

[node name="CustomerPanel" type="Button"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 256, 64 )
theme = ExtResource( 6 )
script = ExtResource( 7 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 196.0
margin_bottom = 60.0
rect_min_size = Vector2( 192, 56 )

[node name="CounterContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 192.0

[node name="ObjectLabel" parent="MarginContainer/VBoxContainer/CounterContainer" instance=ExtResource( 5 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 128.0
margin_bottom = 16.0

[node name="CustomerCounterCarrot" parent="MarginContainer/VBoxContainer/CounterContainer" instance=ExtResource( 3 )]
visible = false

[node name="CustomerCounterPumpkin" parent="MarginContainer/VBoxContainer/CounterContainer" instance=ExtResource( 2 )]
visible = false
margin_left = 132.0
margin_right = 164.0

[node name="CustomerCounterTurnip" parent="MarginContainer/VBoxContainer/CounterContainer" instance=ExtResource( 1 )]
visible = false
margin_left = 132.0
margin_right = 164.0

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 192.0
margin_bottom = 28.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 24.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="PatienceBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 28.0
margin_top = 6.0
margin_right = 192.0
margin_bottom = 18.0
rect_min_size = Vector2( 0, 12 )
size_flags_horizontal = 3
size_flags_vertical = 4
value = 100.0
percent_visible = false

[node name="Tween" type="Tween" parent="."]
